--- a/navbar.css
+++ b/navbar.css
@@ -1,7 +1,11 @@
+
+
+body {
+  background-color:#e7e8d1;
+}
 ul{
 
 }
-
 #topNav li{
     text-decoration: none;
     display: inline;
@@ -10,16 +14,53 @@ ul{
 }
 
 #topNav li:hover{
-  background-color: black;
+  background-color:#a7beae;
 }
 
 #topNav li a{
     text-decoration: none;
+    float: left;
     fontfamily: monospace;
-    font-size: 45px;
-    color: orange;
+    font-size: 20px;
+    color:#b85042;
+}
+#topNav li a:hover{
+  color:#b85042;
+}
+#menuNav{
+  height: 100%;
+  width: 155px;
+  background-color: #a7beae;
+  border: 5px solid #b85042;
+  float: left;
+list-style: none;
+
 }
 
-#topNav li a:hover{
-  color:yellow;
+#menuNav li a{
+  text-decoration: none;
+  float: left;
+  font-size: 15px;
+  fontfamily: monospace;
+  padding-top: 45px;
+  font-size: 15px;
+  color:white;
+}
+#menuNav li a:hover{
+  background-color:#b85042;
+
+}
+
+#para{
+  font-size: 15px;
+  fontfamily: monospace;
+  padding-top: 45px;
+  color:#b85042;
+  float: right;
+  display: inline;
+  text-align: center;
+}
+
+img {
+  border: 3px solid #b85042;
 }
